Fixing footer on safari

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -17,7 +17,6 @@ body
 #app 
 	display: flex
 	flex-direction: column
-	height: 100%
 
 	#header
 		display: flex
@@ -34,7 +33,7 @@ body
 			color: $matcha
 
 	#teaContainer
-		flex: 1
+		flex: 1 0 auto
 		display: flex
 		flex-wrap: wrap
 		justify-content: center
@@ -88,7 +87,7 @@ body
 		display: flex
 		align-items: center
 		justify-content: center
-		align-self: flex-end
+		margin-top: auto
 
 		small
 			font-size: 12px
